<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="spinner_title">Select Gender-</string>
    <string name="spinner_title2">Select Age-</string>
    <string name="facebook_app_id">1586057581469646</string>
    <string name="fb_login_protocol_scheme">fb1586057581469646</string>
    <string name="circle">Circle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_aboutme">About Us</string>
    <string name="nav_task1">Profile</string>
    <string name="nav_task2">Contact Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_task3">Rate app</string>
    <string name="nav_task4">Place History</string>


    <string-array name="nav_item_activity_titles">
        <item>Tourist Guide</item>
        <item>Profile</item>
        <item>Contact Us</item>
        <item>Rate app</item>
        <item>About Us</item>
        <item>Place History</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_review">ReviewActivity</string>
</resources>
